--- a/web/styles.css
+++ b/web/styles.css
@@ -3,10 +3,8 @@
 html, body {
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
   font-family: 'Roboto', sans-serif;
-    background-color: red;
+    background-color: #8BC34A;
 }
 
 #output {
